in these release notes. For a full listing of all changes see
the source code repository at: http://git.wincent.com.

= Changes in 2.0

* compatibility with the Rails 3 template handler API
* use Rails 3 hooks to auto-initialize when listed in Gemfile
* +code+ tags are now emitted instead of +tt+ tags for compliance
  with the HTML5 specification

= Changes in 1.12

* the String#w and String#to_wikitext methods mark their returned
  strings as html_safe under Rails 3

= Changes in 1.11

* extract Gem specification into separate file for compatibility
  with Bundler's "install from Git repository" functionality
* updates for compatibility with Rails 3

= Changes in 1.10.1

* fix builds on 64-bit Darwin platforms

= Changes in 1.10

* a +wikitext+ executable is now included for processing wikitext
  markup from the commandline: input may come from filename
  arguments specified on the commandline, piped in via standard
  input, or typed in interactively via a tty

= Changes in 1.9

* NilClass#w method now accepts an optional parameters hash
* new +link_proc+ option to Wikitext::Parser#parse allows you to
  dynamically apply a custom CSS class based on the link target;
  this can be used, for example, to provide "red links" for
  articles which do not exist yet

= Changes in 1.8

* +pre+ tags may now take an optional +lang+ attribute to mark
  up the translated text for syntax-highlighting
* optimize use of ary_includes function, yielding a boost in
  performance of several percent

= Changes in 1.7

* many optimizations for speed: performance has improved for
  all input types and in some cases has more than doubled
  (the biggest gains are for inputs with more multi-byte UTF-8
  characters)
* uses less memory and usage tends to remain more constant
  due to less creation of temporary objects
* smaller memory footprint due to removal of dead code
* handle blank link text such as <tt>[[foo| ]]</tt>, making
  behaviour consistent with existing handling of zero-width