@@ -284,9 +284,16 @@ the last path component is optional.
 
   {{foo.png}}
 
-Would become:
+When outputting using HTML syntax (the default), this would become:
+
+  <img src="/images/foo.png" alt="foo.png">
+
+When outputting using XML syntax, this would become a self-closing tag:
 
   <img src="/images/foo.png" alt="foo.png" />
+
+See the Wikitext::Parser documentation for information on setting the
+output syntax.
 
 You can override the "/images/" prefix using the +img_prefix+ attribute
 of the Parser.
@@ -299,7 +306,7 @@ slash; that is:
 
 Would become:
 
-  <img src="/foo.png" alt="/foo.png" />
+  <img src="/foo.png" alt="/foo.png">
 
 = Rails support
 
@@ -309,7 +316,21 @@ translated from wikitext markup into HTML when rendered.
 
 Likewise, a +to_wikitext+ method (aliased as +w+) is added to the +String+
 class (and also +NilClass+, for convenience) so that content can be easily
-translated.
+translated from inside view templates following patterns like:
+
+  @post.body.w
+
+The +to_wikitext+ method will preprocess its string using the
+String#wikitext_preprocess method, if it is defined, before feeding the string
+through the parser. This can be used to add application-specific behavior such
+as converting special strings like:
+
+  ticket #1234
+
+into links. An example preprocessor is included with the extension but it is
+not active by default; it can be activated with:
+
+  require 'wikitext/preprocess'
 
 Finally, a Wikitext::Parser#shared_parser method is added to provide
 convenient access to a shared singleton instance of the parser so as to
